subida de la plantilla 01 ale web 2

--- a/scss/_08-cards.scss
+++ b/scss/_08-cards.scss
@@ -67,9 +67,7 @@
 
 .card-container {
   display: flex;
+  // flex-direction: row; /* Cambiar la dirección principal a fila */
   justify-content: center;
-  /* Centra horizontalmente */
   align-items: center;
-  /* Centra verticalmente */
-
 }
