--- a/css/estilo.css
+++ b/css/estilo.css
@@ -640,9 +640,7 @@ footer {
 .card-container {
   display: flex;
   justify-content: center;
-  /* Centra horizontalmente */
   align-items: center;
-  /* Centra verticalmente */
 }
 
 /* Estilos para el botón de enviar del formulario */
@@ -805,12 +803,22 @@ footer {
 }
 /* Estilos del encabezado de la página */
 /* Estilos personalizados para el Toastify */
-.iconoToastify {
-  font-size: small;
-  border: none;
-  border-radius: 10px;
-  background-color: rgba(255, 3, 3, 0.8784313725);
-  color: rgba(254, 254, 232, 0.665);
+/* Clase para el mensaje de Toastify */
+.toastify-total {
+  background-color: rgba(142, 119, 0, 0.7529411765); /* Color de fondo */
+  color: #fff; /* Color del texto */
+  padding: 16px; /* Espaciado interno */
+  border-radius: 4px; /* Bordes redondeados */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+  font-size: 16px; /* Tamaño de fuente */
+  font-weight: bold; /* Peso de la fuente */
+}
+
+/* Estilos para los botones del mensaje Toastify */
+.toastify-total .toastify-close {
+  color: #fff; /* Color del botón */
+  font-size: 14px; /* Tamaño de fuente */
+  font-weight: bold; /* Peso de la fuente */
 }
 
 .tituloPrecio1 {
