--- a/scss/_01-body.scss
+++ b/scss/_01-body.scss
@@ -5,8 +5,8 @@ html {
 
 //-------------------------ESTILOS BODY----------------------------//
 body {
-  background: rgb(63, 4, 4);
-  background-image: url(../img/00-fondos/fondo1.png); /* Imagen de fondo */
+  background: rgb(62, 53, 14);
+  // background-image: url(../img/00-fondos/fondo1.png); /* Imagen de fondo */
   background-repeat:no-repeat; /* No repetir la imagen de fondo */
   background-position: center; /* Posición de la imagen de fondo */
   background-size:cover; /* Ajusta la imagen al tamaño del body */
@@ -17,7 +17,7 @@ body {
 
 //---------------ESTILOS GENERALES P-H1/H6---------------------//
 p {
-  color: rgb(241, 225, 192);
+  color: rgb(255, 255, 255);
    font-size: medium;
 }
 
@@ -71,7 +71,7 @@ a {
 
   /* Enlace sin visitar */
   &:link {
-    color: rgb(243, 206, 19);
+    color: rgb(207, 175, 161);
       text-decoration: none;
     /* Sin subrayado */
   }
@@ -79,7 +79,7 @@ a {
 
   /* Enlace visitado */
   &:visited {
-    color: rgb(243, 189, 71);
+    color: rgb(207, 175, 161);
     text-decoration: none;
     /* Sin subrayado */
   }
